Update product label for audio amplifier

--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@
     }
 
     const PRODUCTS = [
-      { productUrl: "https://mercadolivre.com/sec/2KiBiVv", videoUrl: "https://youtu.be/Hv5pCWgaH7c?si=MtiAijuzmMXhCk-T", category: "audio", label: "AMPLIFICADOR" },
+      { productUrl: "https://mercadolivre.com/sec/2KiBiVv", videoUrl: "https://youtu.be/Hv5pCWgaH7c?si=MtiAijuzmMXhCk-T", category: "audio", label: "AMPLIFICADOR DE FONE" },
       { productUrl: "https://mercadolivre.com/sec/1N2crbk", videoUrl: "https://youtu.be/KCptWBmh1JM?si=AcTtfm2sepo1WMdu", category: "iluminacao", label: "COB 200W" },
       { productUrl: "https://mercadolivre.com/sec/2MAuwvv", videoUrl: "https://youtu.be/ov9ZZiswLME?si=m5FATw-_I_M0KyUc", category: "audio", label: "AXIOS 16" },
       { productUrl: "https://mercadolivre.com/sec/27hmXHu", videoUrl: "https://youtu.be/ov9ZZiswLME?si=m5FATw-_I_M0KyUc", category: "audio", label: "AXIOS 24" },
