--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="icon" href="https://i.imgur.com/OqRCKIx.jpeg" />
   <link rel="apple-touch-icon" href="https://i.imgur.com/OqRCKIx.jpeg" />
 
+  <!-- Carrega o VanillaTilt ANTES do seu script principal -->
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.8.1/vanilla-tilt.min.js"></script>
+
   <style>
     :root{
       --bg:#0b1020;
@@ -230,63 +233,61 @@
 
     @keyframes cardIn{ from{opacity:0; transform: translateY(10px) scale(.99);} to{opacity:1; transform: translateY(0) scale(1);} }
 
-	.card {
-	  grid-column: span 4;
-	  background: linear-gradient(180deg, rgba(255,255,255,.05), rgba(255,255,255,.03));
-	  border: 1px solid var(--border);
-	  border-radius: var(--radius);
-	  overflow: hidden;
-	  box-shadow: var(--shadow);
-	  display: flex;
-	  flex-direction: column;
-	  min-height: 320px;
-	  
-	  /* A mágica acontece aqui: transição suave para todas as propriedades */
-	  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275); 
-	  animation: cardIn .22s ease both;
-	}
-	.card:hover {
-	  /* O card sobe 12px e aumenta 2% de tamanho */
-	  transform: translateY(-12px) scale(1.02);
-	  
-	  /* Destaca a borda com a cor principal do seu tema */
-	  border-color: var(--brand); 
-	  
-	  /* Aumenta o brilho e a sombra para dar profundidade */
-	  filter: brightness(1.1);
-	  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.6);
-	}
-	.card:hover .thumb img {
-	  transform: scale(1.1);
-	  /* Tempo de ida (quando coloca o mouse): 0.4s */
-	  transition: transform 0.4s ease-in-out; 
-	}
+    /* ===== CARD BASE (sem hover forçado no mobile) ===== */
+    .card{
+      grid-column: span 4; /* PC: 3 por linha */
+      background: linear-gradient(180deg, rgba(255,255,255,.05), rgba(255,255,255,.03));
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      overflow: hidden;
+      box-shadow: var(--shadow);
+      display: flex;
+      flex-direction: column;
+      min-height: 320px;
+      width: 100%;
+      animation: cardIn .22s ease both;
 
+      /* transição suave (mantém animação do PC) */
+      transition:
+        transform .35s cubic-bezier(0.175, 0.885, 0.32, 1.275),
+        border-color .25s ease,
+        box-shadow .25s ease,
+        filter .25s ease;
+    }
 
-	.thumb {
-	  height: 180px;
-	  background: rgba(255, 255, 255, .05);
-	  /* Alterado para flex para alinhar o conteúdo corretamente */
-	  display: flex; 
-	  align-items: center;
-	  justify-content: center;
-	  position: relative;
-	  /* Essencial para a imagem não "vazar" do card ao crescer */
-	  overflow: hidden; 
-	}
+    /* Hover/efeitos SÓ em PC com mouse */
+    @media (hover: hover) and (pointer: fine){
+      .card:hover{
+        transform: translateY(-12px) scale(1.02);
+        border-color: var(--brand);
+        filter: brightness(1.1);
+        box-shadow: 0 20px 40px rgba(0,0,0,0.6);
+      }
+      .card:hover .thumb img{
+        transform: scale(1.1);
+        transition: transform 0.4s ease-in-out;
+      }
+    }
 
-	.thumb img {
-	  width: 100%;
-	  height: 100%;
-	  object-fit: cover;
-	  object-position: center;
-	  display: block;
-	  /* Estado inicial levemente maior como você definiu */
-	  transform: scale(1.02); 
-	  
-	  /* A MÁGICA: A transição aqui garante que a imagem VOLTE suavemente */
-	  transition: transform 0.6s ease-in-out; 
-	}
+    .thumb{
+      height: 180px;
+      background: rgba(255, 255, 255, .05);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .thumb img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+      display: block;
+      transform: scale(1.02);
+      transition: transform 0.6s ease-in-out;
+    }
 
     .badge{
       position:absolute; left:12px; top:12px;
@@ -481,25 +482,23 @@
       .toast{transition:none !important}
     }
 
+    /* ======= RESPONSIVO DOS CARDS (CORREÇÃO) ======= */
+    @media (max-width: 980px){
+      .card{ grid-column: span 6; } /* 2 por linha */
+    }
     @media (max-width: 640px){
       .wrap{ padding: 16px; }
       :root{ --header-h: 72px; }
       .tab{ padding:7px 9px; font-size:12px; }
+
+      .grid{ gap:12px; }
+      .card{
+        grid-column: span 12; /* 1 por linha */
+        min-height: 0;
+      }
+      .thumb{ height: 170px; }
+      .name{ min-height: 0; }
     }
-	
-	.card {
-	  /* ... outras propriedades ... */
-	  transition: transform .3s cubic-bezier(0.34, 1.56, 0.64, 1), border-color .3s ease, box-shadow .3s ease;
-	}
-	
-	.card:hover { 
-	  transform: translateY(-10px) scale(1.02); /* Sobe 10px e cresce 2% */
-	  border-color: var(--brand); 
-	  filter: brightness(1.1);
-	  box-shadow: 0 20px 40px rgba(0,0,0,0.4); /* Sombra mais profunda ao levantar */
-	}
-
-
   </style>
 </head>
 
@@ -685,16 +684,6 @@
     const FALLBACK_IMAGE = "https://i.imgur.com/OqRCKIx.jpeg";
     const PIX_KEY = "gabrielsanto.gs31@gmail.com";
 
-    // ✅ EDITE AQUI (manual)
-    // Campos:
-    // - productUrl (obrigatório)
-    // - category (audio|video|iluminacao|outros)
-    // - title (obrigatório)
-    // - image (opcional)
-    // - price (opcional - texto livre)
-    // - videoUrl (opcional)
-    // - affiliateUrl (opcional - se quiser abrir um link diferente)
-    // - label (opcional - badge na imagem)
     const PRODUCTS = [
       {
         productUrl: "https://mercadolivre.com/sec/2Ssek6L",
@@ -1052,6 +1041,25 @@
       `;
     }
 
+    // ======= Tilt só no PC (mouse) e sempre re-aplicado após render =======
+    function aplicarTilt(){
+      const canTilt = window.matchMedia && window.matchMedia("(hover: hover) and (pointer: fine)").matches;
+      if (!canTilt) return;
+      if (!window.VanillaTilt) return;
+
+      // destrói instâncias antigas (evita acumular)
+      document.querySelectorAll(".card").forEach(el => {
+        if (el.vanillaTilt) el.vanillaTilt.destroy();
+      });
+
+      VanillaTilt.init(document.querySelectorAll(".card"), {
+        max: 15,
+        speed: 400,
+        glare: true,
+        "max-glare": 0.2,
+      });
+    }
+
     async function renderProducts(){
       apiHint.textContent = "";
       const filtered = PRODUCTS.filter(matchesFilters);
@@ -1091,6 +1099,7 @@
 
       grid.innerHTML = sorted.map(buildCard).join("");
       wireShareButtons();
+      aplicarTilt();
     }
 
     async function renderWithTransition(){
@@ -1255,24 +1264,6 @@
     setActiveOnly("produtos");
     syncHeaderHeight();
     renderWithTransition();
-	
-	aplicarTilt();
-	
   </script>
-  
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.8.1/vanilla-tilt.min.js"></script>
-	<script>
-	  // Esta função deve ser chamada dentro do seu renderProducts() 
-	  // ou logo após os cards serem criados no DOM
-	  function aplicarTilt() {
-		VanillaTilt.init(document.querySelectorAll(".card"), {
-		  max: 15,    // Inclinação máxima em graus
-		  speed: 400, // Velocidade da transição
-		  glare: true, // Adiciona um efeito de brilho/reflexo
-		  "max-glare": 0.2,
-		});
-	  }
-	</script>
- 
 </body>
 </html>
