Enhance SEO with metadata and canonical link
Added canonical link and updated metadata for SEO.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,42 @@
   <meta name="description" content="Vitrine de produtos recomendados do canal Otimizando o Altar." />
   <link rel="icon" href="https://i.imgur.com/OqRCKIx.jpeg" />
   <link rel="apple-touch-icon" href="https://i.imgur.com/OqRCKIx.jpeg" />
+  <link rel="canonical" href="https://otimizandooaltar.com/">
 
+  <title>Otimizando o Altar | Equipamentos para Igreja, Áudio, Vídeo e Iluminação</title>
+  
+  <meta name="description" content="Equipamentos recomendados para igrejas: mesas de som, câmeras PTZ, iluminação LED, cabos, conectores e muito mais. Produtos testados e indicados pelo canal Otimizando o Altar." />
+  
+  <meta name="robots" content="index, follow">
+  <meta name="googlebot" content="index, follow, max-image-preview:large">
+  
+  <!-- Open Graph (WhatsApp, Instagram, Facebook) -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Otimizando o Altar | Equipamentos para Igreja">
+  <meta property="og:description" content="Produtos testados e recomendados para igrejas: áudio, vídeo e iluminação com custo-benefício.">
+  <meta property="og:url" content="https://otimizandooaltar.com/">
+  <meta property="og:image" content="https://i.imgur.com/OqRCKIx.jpeg">
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Otimizando o Altar">
+  <meta name="twitter:description" content="Equipamentos recomendados para igrejas.">
+  <meta name="twitter:image" content="https://i.imgur.com/OqRCKIx.jpeg">
+  
+  <!-- Dados Estruturados (Google) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Otimizando o Altar",
+    "url": "https://otimizandooaltar.com",
+    "logo": "https://i.imgur.com/OqRCKIx.jpeg",
+    "sameAs": [
+      "https://www.youtube.com/@otimizando-o-altar"
+    ]
+  }
+  </script>
+  
   <!-- Carrega o VanillaTilt ANTES do seu script principal -->
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.8.1/vanilla-tilt.min.js"></script>
 
