Update audio source and autoplay settings

--- a/jussara.html
+++ b/jussara.html
@@ -739,9 +739,9 @@
   <button class="soundBtn" id="soundBtn" type="button">🔈 Som: ON</button>
 
   <!-- Música romântica (nota: mobile exige clique para tocar) -->
-  <audio id="music" loop preload="auto">
-    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
-  </audio>
+	<audio autoplay loop>
+	  <source src="musica.mp3" type="audio/mpeg">
+	</audio>
 
   <script>
     // ===============================
