--- a/jussara.html
+++ b/jussara.html
@@ -739,7 +739,7 @@
   <button class="soundBtn" id="soundBtn" type="button">🔈 Som: ON</button>
 
   <!-- Música romântica (nota: mobile exige clique para tocar) -->
-	<audio autoplay loop>
+	<audio id="music" autoplay loop>
 	  <source src="musica.mp3" type="audio/mpeg">
 	</audio>
 
