Correct typo in option text in jussara.html

--- a/jussara.html
+++ b/jussara.html
@@ -699,7 +699,7 @@
             <option value="">Selecione...</option>
             <option>Sim (humilde e fiel)</option>
             <option>Sim, e ainda pego sobremesa</option>
-            <option>Não (muma mulher como você merece muito mais!)</option>
+            <option>Não (uma mulher como você merece muito mais)</option>
           </select>
         </div>
 
