--- a/jussara.html
+++ b/jussara.html
@@ -543,6 +543,23 @@
       line-height:1.35;
     }
 
+	  @media (max-width: 600px){
+	
+	  body{
+	    align-items: flex-start;   /* não centraliza verticalmente */
+	  }
+	
+	  .wrap{
+	    margin-top: 20px;
+	    margin-bottom: 40px;
+	  }
+	
+	  .formModal{
+	    max-height: 90vh;
+	    overflow-y: auto;
+	  }
+	
+	}
   </style>
 </head>
 
