--- a/jussara.html
+++ b/jussara.html
@@ -647,7 +647,7 @@
       </div>
     </section>
 
-    <footer>Feito na zoeira (mas com honra) 💕</footer>
+    <footer>Feito com amor pelo Gabriel Schmeisk 💕</footer>
   </main>
 
   <!-- Modal (DICA DO PASTOR) -->
